# Algoritmos-I

./: README.md
Laboratorios/Labo 0 - Latex/Source/: main.tex
Laboratorios/Labo 1 - Introducción a C++/Source/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio4.cpp  ejercicio6.cpp
Laboratorios/Labo 1 - Introducción a C++/src/: ejercicio3.cpp  ejercicio5.cpp  ejercicio7.cpp  ejercicio8.cpp
Laboratorios/Labo 2 - Parametros/src/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio5.cpp  ejercicio6.cpp  ejercicio7.cpp  ejercicio8.cpp  ejercicio9.cpp
Laboratorios/Labo 3 - Vectores y archivos/Project_labo3/: CMakeLists.txt
Laboratorios/Labo 3 - Vectores y archivos/Project_labo3/src/: main.cpp  vectores.cpp
Laboratorios/Labo 4 - Debugging/src/: ejercicios.cpp
Laboratorios/Labo 4 - Debugging/template-alumnos/: ejercicios.cpp
Laboratorios/Labo 5 - Ciclos a partir de Invariantes/src/: ejercicios.cpp
Laboratorios/Labo 6 - Testing/src/: CMakeLists.txt
Laboratorios/Labo 6 - Testing/src/ej1/Test/: puntajeTEST.cpp
Laboratorios/Labo 6 - Testing/src/ej2/: llenarTaxis.cpp
Laboratorios/Labo 6 - Testing/src/ej2/Test/: llenarTaxisTEST.cpp
Laboratorios/Labo 6 - Testing/src/ej3/: baldosasDelPiso.cpp
Laboratorios/Labo 7 - Matrices/src/: CMakeLists.txt  ejercicios.cpp
Laboratorios/Labo 8 - Strings/src/src/: ejercicios.cpp
Laboratorios/Labo 9 - Complejidad/Ejercicios/: main.cpp
Trabajos Prácticos/Trabajo Práctico - Implementación/Solución/: auxiliares.cpp  auxiliares.h  auxiliares.h.bak  ejercicios.cpp
(+1 files in other folders)
