cmake_minimum_required(VERSION 3.21)
project(Source)

set(CMAKE_CXX_STANDARD 14)

add_executable(Source_EJ1 ejercicio1.cpp)
add_executable(Source_EJ2 ejercicio2.cpp)
add_executable(Source_EJ3 ejercicio3.cpp)
add_executable(Source_EJ4 ejercicio4.cpp)
add_executable(Source_EJ5 ejercicio5.cpp)
add_executable(Source_EJ6 ejercicio6.cpp)
add_executable(Source_EJ7 ejercicio7.cpp)
add_executable(Source_EJ8 ejercicio8.cpp)
