cmake_minimum_required(VERSION 3.21)
project(src)

set(CMAKE_CXX_STANDARD 14)

add_executable(src_EJ1 ejercicio1.cpp)
add_executable(src_EJ2 ejercicio2.cpp)
add_executable(src_EJ3 ejercicio3.cpp)
add_executable(src_EJ4 ejercicio4.cpp)
add_executable(src_EJ5 ejercicio5.cpp)
add_executable(src_EJ6 ejercicio6.cpp)
add_executable(src_EJ7 ejercicio7.cpp)
add_executable(src_EJ8 ejercicio8.cpp)
add_executable(src_EJ9 ejercicio9.cpp)